# cozy-music

./: .gitignore  Cargo.toml  biome.json  build.rs  bun.lockb  package.json
.cargo/: config.toml
src/: cli.rs  gui.rs  lib.rs  library.rs  main.rs  player.rs
src-client/: build.ts  package.json  run-dev.sh  svelte.config.ts  tsconfig.json  vite.config.ts
src-client/src/: app.html  ssr.ts  style.css
src-client/src/components/: Player.ts  hydrate.ts
src-client/src/components/utils/: hydrate.ts  icon.ts
src-client/src/lib/: player.ts
src-client/src/lib/player/: Button.svelte  Player.svelte  display.ts  player.svelte.ts
src-client/src/routes/: +page.svelte  about.ts  index.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs  player.rs
src-tauri/src/player/: audio_loop.rs  bus.rs  decoder.rs  device.rs  error.rs  event.rs  ipc.rs  resample.rs
src-tauri/src/player/decoder/: opus.rs  sym.rs
src/gui/: events.rs  widgets.rs
src/gui/widgets/: player.rs  utils.rs
src/player/: audio_loop.rs  bus.rs  decoder.rs  device.rs  effects.rs  error.rs  event.rs  resample.rs
src/player/decoder/: opus.rs  sym.rs
src/player/effects/: filter.rs  gain.rs  node.rs
