[package]
name = "cozy-music"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

[build-dependencies]
slint-build = "1.14.1"

[dependencies]
arc-swap = "1.7.1"
assert_no_alloc = "1.1.2"
atomic_float = "1.1.0"
cfg-if = "1.0.4"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
macro_pub = "0.1.0"
ogg-opus = { version = "0.1.2", optional = true }
serde = { version = "1", features = ["derive"] }
slint = "1.14.1"
symphonia = { version = "0.5.4", features = ["mp3"] }
thiserror = "2.0.17"
ts-rs = "11.0.1"

[features]
default = []
opus = ["ogg-opus"]

