[package]
name = "cozy-music"
description = "A cozy crossplatform music player built in rust"
version = "0.1.0"
authors = ["you"]
edition = "2024"

[build-dependencies]
slint-build = "1.14.1"

[dependencies]
arc-swap = "1.7.1"
argh = "0.1.13"
assert_no_alloc = "1.1.2"
atomic_float = "1.1.0"
cfg-if = "1.0.4"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
iced = { version = "0.13.1", features = ["svg", "async-std", "tokio"] }
log = "0.4.28"
macro_pub = "0.1.0"
ogg-opus = { version = "0.1.2", optional = true }
serde = { version = "1", features = ["derive"] }
symphonia = { version = "0.5.4", features = ["mp3"] }
thiserror = "2.0.17"
tracing-subscriber = "0.3"

[features]
default = []
opus = ["ogg-opus"]
