[package]
name = "cozy-music"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cozy_music_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
arc-swap = "1.7.1"
assert_no_alloc = "1.1.2"
atomic_float = "1.1.0"
cpal = "0.16.0"
crossbeam-channel = "0.5.15"
macro_pub = "0.1.0"
ogg-opus = "0.1.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
symphonia = { version = "0.5.4", features = ["mp3"] }
tauri = { version = "^2", features = [] }
thiserror = "2.0.17"
ts-rs = "11.0.1"
